# DLpy

./: .coverage  .gitignore  README.md  files.ps1  lint.ps1  pyproject.toml  python_files_inventory.txt  requirements_dev.txt  setup.py
DLpy/: __init__.py
DLpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DLpy/core/: __init__.py  autograd.py  context.py  function.py  module.py  serialization.py  tensor.py
DLpy/data/: __init__.py  dataloader.py  dataset.py  samplers.py
DLpy/nn/: __init__.py  activations.py  batch_norm.py  conv2d.py  dropout.py  layer_norm.py  linear.py  modules.py  normalization.py  pooling.py  rnn.py  sequential.py  transformer.py
DLpy/nn/architectures/: __init__.py
DLpy/nn/architectures/gnn/: __init__.py  convolution.py  message_passing.py  pooling.py
DLpy/nn/attention/: __init__.py  additive.py  linear.py  multihead.py  sparse.py  utils.py
DLpy/nn/base/: __init__.py  activations.py  conv2d.py  dropout.py  linear.py  pooling.py  sequential.py
DLpy/nn/norm/: __init__.py  batch_norm.py  group_norm.py  instance_norm.py  layer_norm.py
DLpy/ops/: __init__.py  basic.py  cnn.py  elementwise.py  loss.py  matrix.py  pooling.py  power.py  reduction.py  reshape.py
DLpy/optim/: __init__.py  adadelta.py  adagrad.py  adam.py  adamax.py  optimizer.py  rmsprop.py  sgd.py
DLpy/utils/: __init__.py  decomposition.py  utils.py
HandsOn/: 1_Tensors.ipynb  2_Optmizers.ipynb
tests/: test_activations.py  test_advanced_llm.py  test_attention.py  test_autograd.py  test_cnn.py  test_context.py  test_data.py  test_decompositions.py  test_dropout.py  test_embeddings.py  test_function.py  test_gnn.py  test_loss.py  test_modules.py  test_nn.py  test_norm_layers.py  test_norm_pool.py  test_ops.py  test_optim.py  test_rnn.py  test_serialization.py  test_tensor.py  test_transformer.py  test_utils.py
(+9 files in other folders)
